<resources>
    <string name="app_name">CUNavigator</string>
    <string name="book">Book</string>
    <string name="pen">Pen</string>
    <string name="globe">Globe</string>
    <string name="ball">Ball</string>
    <string name="compass">Compass</string>
    <string name="set">Set</string>
    <string name="beaker">Beaker</string>
    <string name="laptop">Laptop</string>
    <string name="cu">CU</string>
    <string name="navigator">Navigator</string>
    <string name="todo">TODO</string>
    <string name="home">Home</string>
    <string name="schedule">Schedule</string>
    <string name="search">Search</string>
    <string name="news">News</string>
<!--    Import-->
    <string name="manage">Manage</string>
    <string name="hello">Hello!</string>
    <string name="login_subtext">Login to your account</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="new_user">Don\'t have an account?</string>
    <string name="page_title">Let\'s get started</string>
    <string name="enter_details">Enter your details here:</string>
    <string name="pg_name">PG Name</string>
    <string name="pg_address">PG Address</string>
    <string name="pincode">Pincode</string>
    <string name="area">Area</string>
    <string name="contact_name">Contact Name</string>
    <string name="contact_person_name">Contact Person\'s Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="contact_person_role">Contact Person\'s Role</string>
    <string name="submit">Submit</string>
    <string name="sample_text">Sample Text</string>
    <string name="you_will_receive_a_call_shortly">You will receive a call shortly.</string>
    <string name="you_will_be_redirected_in">You will be redirected login page</string>
    <string name="partnerKey">kHDGJf0882bbb99d94e99a0b6c73c9d771e8e</string>
    <string name="room">Room</string>
    <string name="passbook">Passbook</string>
    <string name="money">Money</string>
    <string name="tenants">Tenants</string>
    <string name="accounts">Accounts</string>
    <string name="complaints">Complaints</string>
    <string name="food">Food</string>
    <string name="announcement">Announcement</string>
    <string name="enquiry">Enquiry</string>
    <string name="menu_bottom_navigation">\@menu/bottom_navigation</string>
    <string name="profile">Profile</string>
    <string name="chat">Chat</string>
    <string name="add">Add</string>
    <string name="subscription">Subscription</string>
    <string name="notification">Notification</string>
    <string name="agreements">Agreements</string>
    <string name="staff">Staff</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="lexliv">LexLiv</string>
    <string name="slogan">Stay together. Grow together.</string>
    <string name="refer">Refer</string>
    <string name="refer_earn"><![CDATA[Refer & Earn]]></string>
    <string name="verify">Verify</string>
    <string name="OTP">OTP</string>
    <string name="signup">SignUp</string>
    <string name="enterphonenumber">Enter the Phone Number to continue</string>
    <string name="errorverifyingotp">There was an error verifying OTP</string>
    <string name="verify_your_number">Verify Your Number</string>
    <string name="please_enter_your_phone_number_for_verification">Please enter your Phone number for verification</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="working">Working . . .</string>
    <string name="resend">Resend</string>
    <string name="logout">Logout</string>
<!--    Import Ends-->
    <string name="on_going_events">On Going Events</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>