<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group>
        <item
            android:id="@+id/profile"
            android:title="@string/profile"
            android:icon="@drawable/ic_profile" />



    </group>


    <!--    Settings and Support-->
    <group android:id="@+id/group2">

        <item
            android:id="@+id/settings"
            android:title="@string/settings"
            android:icon="@drawable/ic_settings_black_24dp" />

        <item
            android:id="@+id/contact"
            android:title="@string/support"
            android:icon="@drawable/ic_baseline_contact_support_24" />
    </group>

    <group android:id="@+id/group3">



        <item
            android:id="@+id/logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_logout" />

    </group>

</menu>