<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/splash_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_background"
    tools:context=".Splash">


    <TextView
        android:id="@+id/main_text_splash"
        android:layout_width="102dp"
        android:layout_height="73dp"
        android:layout_marginTop="92dp"
        android:fontFamily="@font/mangosans_bold"
        android:text="@string/cu"
        android:textColor="@color/design_default_color_background"
        android:textSize="70sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/book_splash" />

    <TextView
        android:id="@+id/sub_text_splash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:alpha=".8"
        android:fontFamily="@font/mangosans_regular"
        android:text="@string/navigator"
        android:textColor="@color/design_default_color_background"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_text_splash" />

    <ImageView
        android:id="@+id/book_splash"
        android:layout_width="82dp"
        android:layout_height="68dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="184dp"
        android:layout_marginBottom="124dp"
        android:alpha="0.1"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_notebook" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="102dp"
        android:layout_height="93dp"
        android:layout_marginTop="56dp"
        android:alpha="0.1"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toTopOf="@+id/book_splash"
        app:layout_constraintEnd_toStartOf="@+id/pen_splash"
        app:layout_constraintHorizontal_bias="0.806"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_laptop" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="79dp"
        android:layout_height="86dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:alpha="0.1"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toTopOf="@+id/main_text_splash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pen_splash"
        app:srcCompat="@drawable/ic_ball_" />

    <ImageView
        android:id="@+id/pen_splash"
        android:layout_width="71dp"
        android:layout_height="79dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="52dp"
        android:alpha="0.1"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.266"
        app:srcCompat="@drawable/ic_pen" />

    <ImageView
        android:id="@+id/beaker_splash"
        android:layout_width="74dp"
        android:layout_height="74dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="36dp"
        android:alpha="0.1"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.993"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.8"
        app:srcCompat="@drawable/ic_beaker" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="82dp"
        android:layout_height="79dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="48dp"
        android:alpha="0.1"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sub_text_splash"
        app:srcCompat="@drawable/ic_compass" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="72dp"
        android:layout_height="80dp"
        android:layout_marginStart="184dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="67dp"
        android:alpha="0.1"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toTopOf="@+id/beaker_splash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/sub_text_splash"
        app:srcCompat="@drawable/ic_set" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="56dp"
        android:layout_height="90dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="56dp"
        android:alpha="0.1"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/beaker_splash"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/ic_globe" />
</androidx.constraintlayout.widget.ConstraintLayout>